feat(backend): extend multitenant booking and messaging